--- a/index.html
+++ b/index.html
@@ -5,43 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>supershop</title>
+    <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
-    <style>
-        button{
-            color: blue;
-            text-align: center;
-            border: 5px;
-            resize: vertical;
-            object-position: center;
-            range: infinite;
-        }
-
-        h1{
-            text-align: center;
-        }
-
-        h3{
-            text-align: center;
-            text-decoration: aqua;
-            text-decoration-style: dashed;
-        }
-    </style>
-
-    <h1>
-        welcome to supershop !
-    </h1>
-    
-    <h3>
-        for buy anithing please push on the button !
-    </h3>
-
-    <h3>
-        if you need help go to my discord server : <a href="https://discord.gg/3Bm3X7zAhW">CLICK HERE</a> !
-    </h3>
-    
-    <a href="https://lilkeep214.github.io/artplastique/">
-        <button>
+    <a href="page 2.html">
+        <button class="btn">
             >click here<
         </button>
     </a>
